# nwhacks-2025

./: LICENSE  forecastingtesting.py
backend/: app.py  esp.py  forecastingtesting.py  model.py
data/: 2025_01_19_03_33_19_241.json  2025_01_19_03_34_13_804.json
emb/components/http_manager/: CMakeLists.txt  http_manager.c  http_manager.h
emb/components/json_manager/: CMakeLists.txt  json_manager.c  json_manager.h
emb/components/mem_monitor/: CMakeLists.txt  mem_monitor.c  mem_monitor.h
emb/components/temp_sensor/: CMakeLists.txt  temp_sensor.c  temp_sensor.h
emb/components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
emb/main/: CMakeLists.txt  main.c
emb/nwPlus/: CMakeLists.txt
emb/nwPlus/components/json_manager/: json_manager.h
emb/nwPlus/components/mem_monitor/: mem_monitor.c
emb/nwPlus/components/wifi_manager/: CMakeLists.txt
emb/nwPlus/main/: CMakeLists.txt  main.c
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: DetailedView.tsx  MiniGraph.tsx  ThemeToggle.tsx
frontend/components/: DetailedView.tsx  Forecaster.tsx  MemoryAnalysis.tsx  MiniGraph.tsx  ThemeToggle.tsx
frontend/constants/: constants.ts  mockdata.ts
nwPlus/components/json_manager/: json_manager.c
nwPlus/components/mem_monitor/: mem_monitor.h
nwPlus/components/wifi_manager/: wifi_manager.c  wifi_manager.h
